--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,19 +7,21 @@
     android:orientation="vertical"
     android:padding="10dp"
     tools:context="com.example.raluca.storebooksystem.HomeActivity"
-    tools:weightSum="2">
+    tools:weightSum="2"
+    android:background="@color/gri">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
+
                 android:layout_width="368dp"
                 android:layout_height="153dp"
                 android:clipToPadding="false"
@@ -41,7 +43,7 @@
                         android:id="@+id/card"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/lightgray"
+
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -84,7 +86,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/lightgray"
+
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -95,7 +97,7 @@
                             android:layout_height="64dp"
                             android:background="@drawable/cerclebackgroundpink"
                             android:padding="10dp"
-                            android:src="@drawable/ic_shopping_caaaaart_black_24dp" />
+                            android:src="@drawable/all_books" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -126,6 +128,7 @@
                 android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="horizontal"
+                android:paddingTop="30dp"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp"
                 tools:weightSum="2">
@@ -142,7 +145,6 @@
                         android:id="@+id/card"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/lightgray"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -185,7 +187,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/lightgray"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -219,6 +220,106 @@
                 </android.support.v7.widget.CardView>
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="368dp"
+                android:layout_height="153dp"
+                android:clipToPadding="false"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingTop="30dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="0dp"
+                tools:weightSum="2">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardScan"
+                    android:layout_width="160dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
+
+                    <LinearLayout
+                        android:id="@+id/card"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/cerclebackgroundred"
+                            android:padding="10dp"
+                            android:src="@drawable/qr_code" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="QR Code"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="Scan a book!"
+                            android:textColor="@color/dark_light" />
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardNoName"
+                    android:layout_width="160dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="10dp"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:background="@drawable/cercleorange"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_show_chart_black_24dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="Book statistics"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="The most read books of the month"
+                            android:textColor="@color/dark_light" />
+
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
@@ -245,9 +346,9 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:paddingTop="20dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp">
 
                 <HorizontalScrollView
                     android:id="@+id/scrollView"
