--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,11 @@
     <!--<color name="colorAccent">#FF4081</color>-->
     <color name="viewBg">#f1f5f8</color>
     <color name="album_title">#4c4c4c</color>
+    <color name="red">#ea5721</color>
+    <color name="greenOpen">#8dd35f</color>
+    <color name="gri"> #f7f7f7</color>
+
+
 
 
 </resources>
