Am reparat adaugarea de review si am adaugat partea initiala pentru streaming audio

--- a/app/src/main/res/layout/activity_pdf_viewer.xml
+++ b/app/src/main/res/layout/activity_pdf_viewer.xml
@@ -2,12 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_pdf_viewer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="16dp"
-    android:layout_marginLeft="16dp"
-    android:paddingRight="16dp"
     android:paddingTop="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context="com.example.raluca.storebooksystem.PdfViewer">
 
     <com.github.barteksc.pdfviewer.PDFView
