--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -276,7 +276,7 @@
 
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/cardNoName"
+                    android:id="@+id/cardAudioBooks"
                     android:layout_width="160dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -289,20 +289,19 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-
                         <ImageView
                             android:id="@+id/imageView4"
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                            android:background="@drawable/cercleorange"
+                            android:background="@drawable/cerclebackgroundblue_strong"
                             android:padding="10dp"
-                            android:src="@drawable/ic_show_chart_black_24dp" />
+                            android:src="@drawable/audio_books" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Book statistics"
+                            android:text="Audio books"
                             android:textStyle="bold" />
 
 
@@ -311,7 +310,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="The most read books of the month"
+                            android:text="The best free Audiobooks!"
                             android:textColor="@color/dark_light" />
 
 
