--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,11 +7,11 @@
     tools:context="com.example.raluca.storebooksystem.ProfileActivity">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,20 +22,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:paddingLeft="20dp"
-                android:textAlignment="center"
                 android:layout_marginTop="40dp"
                 android:fontFamily="serif"
+                android:paddingLeft="20dp"
                 android:text="My Details"
+                android:textAlignment="center"
                 android:textColor="?attr/colorAccent"
                 android:textSize="24sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="20dp"
                 android:text="First Name"
-                android:layout_marginLeft="60dp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -44,8 +44,8 @@
                 android:id="@+id/editTextFirstName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="60dp"
+                android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false"
                 android:textSize="16sp" />
@@ -53,9 +53,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="20dp"
                 android:text="Last Name"
-                android:layout_marginLeft="60dp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -64,8 +64,8 @@
                 android:id="@+id/editTextLastName"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="60dp"
+                android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false"
                 android:textSize="16sp" />
@@ -73,9 +73,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="20dp"
                 android:text="Userame"
-                android:layout_marginLeft="60dp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -84,8 +84,8 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="60dp"
+                android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false"
                 android:textSize="16sp" />
@@ -93,9 +93,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="20dp"
                 android:text="Email"
-                android:layout_marginLeft="60dp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -104,8 +104,8 @@
                 android:id="@+id/editTextEmail"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="60dp"
+                android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false"
                 android:textSize="16sp" />
@@ -113,9 +113,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="20dp"
                 android:text="Contact Number"
-                android:layout_marginLeft="60dp"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -124,32 +124,33 @@
                 android:id="@+id/editTextContactNumber"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:layout_marginLeft="60dp"
+                android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false"
                 android:textSize="16sp" />
+
 
             <EditText
                 android:id="@+id/errorInfo2"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="10sp"
+                android:layout_marginLeft="60dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="60dp"/>
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="10sp" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardViewUpdate"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="15dp"
                 app:cardBackgroundColor="@color/colorPrimaryDark"
                 app:cardCornerRadius="25dp"
-                app:cardElevation="10dp"
-                android:layout_marginLeft="40dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="30dp">
+                app:cardElevation="10dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
