--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/brunoLight2"
-    tools:context="com.example.raluca.storebooksystem.AddReviewActivity">
+    tools:context="com.example.raluca.storebooksystem.Activities.Activities.AddReviewActivity">
 
     <TextView
         android:id="@+id/textView7"
