--- a/app/src/main/res/layout/activity_my_library.xml
+++ b/app/src/main/res/layout/activity_my_library.xml
@@ -7,7 +7,7 @@
     android:background="@color/gri"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.raluca.storebooksystem.MyLibraryActivity"
+    tools:context="com.example.raluca.storebooksystem.Activities.Activities.MyLibraryActivity"
     tools:weightSum="2">
 
     <ScrollView
@@ -137,7 +137,7 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/cardCartBookStatistics"
-                    android:layout_width="160dp"
+                    android:layout_width="340dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
                     android:clickable="true"
@@ -177,47 +177,7 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    android:id="@+id/cardAudioBooks"
-                    android:layout_width="160dp"
-                    android:layout_height="150dp"
-                    android:layout_margin="10dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/imageView4"
-                            android:layout_width="64dp"
-                            android:layout_height="64dp"
-                            android:background="@drawable/cerclebackgroundblue_strong"
-                            android:padding="10dp"
-                            android:src="@drawable/audio_books" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:text="Audio books"
-                            android:textStyle="bold" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="The best free Audiobooks!"
-                            android:layout_marginBottom="20dp"
-                            android:textColor="@color/dark_light" />
-
-
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
