--- a/app/src/main/res/layout/activity_audio_books.xml
+++ b/app/src/main/res/layout/activity_audio_books.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raluca.storebooksystem.Activities.Activities.AudioBooksActivity">
+    tools:context="com.example.raluca.storebooksystem.Activities.a.AudioBooksActivity">
 
     <include layout="@layout/content_main_for_audio_books" />
 
