--- a/app/src/main/res/layout/activity_category_menu.xml
+++ b/app/src/main/res/layout/activity_category_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raluca.storebooksystem.Activities.Activities.CategoryMenu">
+    tools:context="com.example.raluca.storebooksystem.Activities.a.CategoryMenu">
 
     <ScrollView
         android:layout_width="match_parent"
