--- a/app/src/main/res/layout/activity_my_library.xml
+++ b/app/src/main/res/layout/activity_my_library.xml
@@ -7,7 +7,7 @@
     android:background="@color/gri"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context="com.example.raluca.storebooksystem.Activities.Activities.MyLibraryActivity"
+    tools:context="com.example.raluca.storebooksystem.Activities.a.MyLibraryActivity"
     tools:weightSum="2">
 
     <ScrollView
