--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raluca.storebooksystem.Activities.Activities.ReviewsActivity">
+    tools:context="com.example.raluca.storebooksystem.Activities.a.ReviewsActivity">
 
     <ListView
         android:id="@+id/listView"
